minor changes in header, header update in ai-development-service

--- a/header/header.css
+++ b/header/header.css
@@ -380,3 +380,19 @@ ol {
     position: relative;
     top: 8px;
 }
+
+a{
+    text-decoration: none;
+}
+
+.navdiv:hover{
+    background-color: none;
+}
+
+#site_header{
+    position:fixed;
+    top:0;
+    left:0;
+    right:0;
+    z-index:100;
+}
