--- a/contact/contact.css
+++ b/contact/contact.css
@@ -154,14 +154,14 @@
     align-items: center;
     gap: 10px;
     padding: 10px;
-    background: #f8f8f8;
+    /* background: #f8f8f8; */
     border-radius: 8px;
     transition: all 0.3s;
 }
 
-#contact-site_header .contact-navdiv:hover {
+/* #contact-site_header .contact-navdiv:hover {
     background: #e8f0fe;
-}
+} */
 
 #contact-site_header .contact-navdiv img {
     height: 24px;
